# clip_image

./: Cargo.toml  README.md
data/: tile_1024.10.tif  tile_1024.100.tif  tile_1024_19.tif
src/: main.rs
src/cli/: cli.rs
src/clip/: clip.rs  mod.rs  status.rs  tools.rs
