[package]
name = "clip_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
clap = {version = "3.1", features = ["derive"]}
anyhow = "1.0.81"
once_cell = "1.19.0"
indicatif = "0.17.8"